fix-issue-5687 - Applying the review’s advice
Signed-off-by: Pietro Paolo Castagna <PietroPaolo.Castagna@gmail.com>